# recipe

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
cmake/: utils.cmake
communication/: CMakeLists.txt
communication/include/: web_serializer.h  webserver_access.hpp
communication/src/: web_serializer_json.cpp  web_serializer_json.hpp  webserver_access.cpp
documentation/: CMakeLists.txt  recipe_desktop_ui.dox  recipe_general.dox
gui/: CMakeLists.txt
gui/desktop/: CMakeLists.txt
gui/desktop/qml/: IngredientControls.qml  IngredientEditView.qml  IngredientList.qml  IngredientPage.qml  IngredientReadonlyView.qml  PlanControls.qml  PlanItemView.qml  PlanMealView.qml  PlanPage.qml  RecipeEditView.qml  RecipeFilterDialog.qml  RecipeList.qml  RecipePage.qml  RecipeReadonlyView.qml  ShoppingControls.qml  qml.qrc
gui/desktop/src/: main.cpp
gui/mobile/: CMakeLists.txt
gui/mobile/qml/: PlanList.qml  PlanView.qml  RBorderedText.qml  RText.qml  RecipeList.qml  RecipeView.qml  main.qml  qml.qrc
gui/mobile/qml/common/: Common.qml  (+2 more)
gui/mobile/src/: main.cpp
gui/models/: CMakeLists.txt  amount_list_adapter.hpp  amounted_list_model.cpp  amounted_list_model.hpp  enum_adapter.hpp  ingredient_model.cpp  ingredient_model.hpp  plan_item_model.cpp  plan_item_model.hpp  plan_model.cpp  plan_model.hpp  recipe_model.cpp  recipe_model.hpp  shopping_day_model.cpp  shopping_day_model.hpp  shopping_list_model.cpp  shopping_list_model.hpp
gui/models/include/: amount_list_adapter.hpp  amounted_list_model.hpp  enum_adapter.hpp  ingredient_model.hpp  plan_item_model.hpp  plan_model.hpp  recipe_model.hpp  shopping_list_model.hpp
gui/models/src/: amounted_list_model.cpp  enum_adapter.cpp  ingredient_model.cpp  plan_item_model.cpp  plan_model.cpp  recipe_model.cpp  shopping_day_model.cpp  shopping_list_model.cpp
gui/qml/: IngredientControls.qml  IngredientEditView.qml  IngredientList.qml  IngredientPage.qml  IngredientReadonlyView.qml  IngredientView.qml  PlanControls.qml  PlanItemView.qml  PlanPage.qml  PlanView.qml  RButton.qml  RecipeEditView.qml  RecipeList.qml  RecipePage.qml  RecipeReadonlyView.qml  RecipeView.qml  ShoppingListView.qml  ShoppingPage.qml  main.qml  qml.qrc
gui/qml/common/: Common.qml  RLabeledControl.qml  SortFilterModel.qml
gui/src/: main.cpp
io/: CMakeLists.txt
io/include/: amounted_io.h  ingredient_io.h  io_provider.h  plan_io.h  recipe_io.h  recipe_tex_output.h  shopping_io.h
io/src/: amounted_json_io.cpp  amounted_json_io.hpp  ingredient_json_io.cpp  ingredient_json_io.hpp  io_provider.cpp  plan_json_io.cpp  plan_json_io.hpp  plan_tex_writer.cpp  plan_tex_writer.hpp  recipe_json_io.cpp  recipe_json_io.hpp  recipe_tex_output.cpp  recipe_tex_writer.cpp  recipe_tex_writer.hpp  shopping_day_generator.cpp  shopping_day_generator.h  shopping_json_io.cpp  shopping_json_io.h  shopping_list_tex_writer.cpp  shopping_list_tex_writer.hpp  tex_writer.cpp  tex_writer.hpp
recipe/: CMakeLists.txt
recipe/include/: amounted_ingredient.h  ingredient.h  plan.h  plan_item.h  recipe.h  shopping_day.h  shopping_list.h
recipe/src/: amounted_ingredient.cpp  ingredient.cpp  plan.cpp  plan_item.cpp  recipe.cpp  shopping_day.cpp  shopping_list.cpp
test/: CMakeLists.txt  amounted_ingredient_test.cpp  io_tests.cpp  recipe_test.cpp  shopping_tests.cpp
test/data/: ingredients_version0.json  plan_version0.json  recipes_version0.json  shopping_version0.json  shoppinglist_version0.json
webserver/: swagger.yaml
webserver/feeder/: CMakeLists.txt  feeder_application.cpp  feeder_application.hpp  main.cpp
webserver/python-flask-server/: setup.py
webserver/python-flask-server/swagger_server/: __main__.py
(+22 files in other folders)
